# newlogme

./: README.md  REWRITE_PLAN.md  pyproject.toml  ulogme.toml
data/: ulogme.duckdb.wal
new/: README.md
new/site-template/: package.json  server.ts  zosite.json
new/site-template/backend-lib/: ulogme-db.ts
new/site-template/src/components/ulogme/: CategoryPieChart.tsx  CategoryStats.tsx  HackingStreak.tsx  KeystrokeChart.tsx  OverviewChart.tsx  index.ts
new/site-template/src/pages/: DayView.tsx
new/tracker/: config.py  daemon.py  keyboard.py
scripts/: seed_test_data.py
site-template/: README.md  bunfig.toml  event-registrations.db  index.html  tsconfig.json  vite.config.ts
site-template/.claude/: settings.json
site-template/backend-lib/: db.ts  ulogme-db.ts  zo-api.ts
site-template/docs/: shadcncharts.md
site-template/src/: App.tsx  main.tsx  styles.css
site-template/src/components/: SampleComponent.tsx  chart-area-interactive.tsx
site-template/src/components/ulogme/: ActivityTimeline.tsx  NotesPanel.tsx
site-template/src/pages/: Dashboard.tsx  Home.tsx  Overview.tsx  Settings.tsx
site-template/src/pages/demos/: blank-demo.tsx  blog-demo.tsx  data-demo.tsx  event-demo.tsx  marketing-demo.tsx  slides-demo.tsx
tracker/: __init__.py  __main__.py  daemon.py  launchd.py  storage.py  utils.py  window.py
