[project]
name = "ulogme"
version = "0.1.0"
description = "Modern activity tracker for macOS - tracks active windows and keystrokes for personal productivity analysis"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.1.0",
    "pyobjc-framework-Cocoa>=10.0",
    "pyobjc-framework-Quartz>=10.0",
]

[project.scripts]
ulogme = "tracker.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tracker"]
